--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Project_PRJ/nbproject/private/
 /Project_PRJ/build/
 /Project_PRJ/dist/
+/WheyStore/nbproject/private/
+/WheyStore/build/
+/WheyStore/dist/
