--- a/WheyStore/nbproject/project.properties
+++ b/WheyStore/nbproject/project.properties
@@ -27,11 +27,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jstl-api-1.2.jar=D:\\K\u00cc 5\\PRJ301\\gift\\jstl-api-1.2.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Ky4\\PRJ301\\tools\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar=D:\\Ky4\\PRJ301\\tools\\jakarta.servlet.jsp.jstl-api-3.0.0.jar
 file.reference.jstl-api-1.2.jar-1=D:\\Ky4\\PRJ301\\tools\\jstl-api-1.2.jar
-file.reference.jstl-impl-1.2.jar=D:\\K\u00cc 5\\PRJ301\\gift\\jstl-impl-1.2.jar
 file.reference.jstl-impl-1.2.jar-1=D:\\Ky4\\PRJ301\\tools\\jstl-impl-1.2.jar
-file.reference.sqljdbc4.jar=D:\\K\u00cc 5\\PRJ301\\gift\\sqljdbc4.jar
 file.reference.sqljdbc4.jar-1=D:\\Ky4\\PRJ301\\tools\\sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
@@ -42,12 +41,13 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jstl-api-1.2.jar}:\
-    ${file.reference.jstl-impl-1.2.jar}:\
-    ${file.reference.sqljdbc4.jar}:\
     ${file.reference.sqljdbc4.jar-1}:\
     ${file.reference.jstl-api-1.2.jar-1}:\
-    ${file.reference.jstl-impl-1.2.jar-1}
+    ${file.reference.jstl-impl-1.2.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar}:\
+    ${libs.jakartaee-api-9.0.classpath}:\
+    ${libs.jakartaee-web-api-9.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
