--- a/WheyStore/web/WEB-INF/web.xml
+++ b/WheyStore/web/WEB-INF/web.xml
@@ -30,6 +30,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>home.jsp</welcome-file>
+        <welcome-file>index_1.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
