--- a/WheyStore/nbproject/project.properties
+++ b/WheyStore/nbproject/project.properties
@@ -27,9 +27,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\tools\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar=C:\\tools\\jakarta.servlet.jsp.jstl-api-3.0.0.jar
-file.reference.sqljdbc4.jar=C:\\tools\\sqljdbc4.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Ky4\\PRJ301\\tools\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar=D:\\Ky4\\PRJ301\\tools\\jakarta.servlet.jsp.jstl-api-3.0.0.jar
+file.reference.sqljdbc4.jar=D:\\Ky4\\PRJ301\\tools\\sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,10 +40,10 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jakartaee-api-9.0.classpath}:\
+    ${libs.jakartaee-web-api-9.0.classpath}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar}:\
-    ${file.reference.sqljdbc4.jar}:\
-    ${libs.jakartaee-web-api-9.0.classpath}
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
