--- a/WheyStore/nbproject/project.properties
+++ b/WheyStore/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\tools\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\K\u00cc 5\\PRJ301\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar=C:\\tools\\jakarta.servlet.jsp.jstl-api-3.0.0.jar
 file.reference.sqljdbc4.jar=C:\\tools\\sqljdbc4.jar
 includes=**
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.jakartaee-web-api-9.0.classpath}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
